# karaokesmith-api

./: .coveragerc  .flake8  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.py
app/application/adapters/: request_adapter_interface.py
app/domain/entities/: audio_media.py  mp3_file.py  sample.py  video_metadata.py  video_source.py  youtube_audio.py
app/domain/repositories/: sample_repository_impl.py  sample_repository_interface.py
app/domain/utils/: response.py  service_response.py  use_case_response.py
app/errors/: http.py
app/infra/gateways/: ytdlp_video_downloader.py
app/infra/logger/: logger.py
app/infrastructure/gateways/: filesystem_mp3_file_validator.py  ytdlp_video_downloader.py
app/infrastructure/repositories/: mongodb_sample_repository.py
app/main/adapters/: starlette_adapter.py  starlette_request_adapter.py
app/main/composite/: create_sample_composite.py
app/main/config/: server.py  settings.py
app/main/middlewares/: __init__.py
app/main/routers/: __init__.py  api_routes.py  create_sample_router.py
tests/: conftest.py
tests/domain/entities/: test_audio_media.py  test_mp3_file.py  test_sample.py  test_video_source.py  test_youtube_audio.py
tests/domain/repositories/: test_sample_repository.py
tests/domain/utils/: test_response.py  test_service_response.py  test_use_case_response.py
tests/infrastructure/gateways/: test_filesystem_mp3_file_validator.py  test_ytdlp_video_downloader.py
tests/infrastructure/repositories/: test_mongodb_sample_repository.py
tests/services/mp3_file/: test_mp3_file_service.py
(+58 files in other folders)
