[tool.poetry]
name = "karaokesmith-api"
version = "0.1.0"
description = ""
authors = ["Paulo Alexandre Mello <palexandremello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
pydantic = "^1.10.4"
SQLAlchemy = "^2.0.0"
aiohttp = "^3.8.3"
yt-dlp = "^2023.2.17"
aiofiles = "^23.1.0"
numpy = "^1.24.2"
pydub = "^0.25.1"
pymongo = "^4.3.3"
motor = "^3.1.1"
starlette = "^0.26.1"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
coverage = {version = "^7.1.0", extras = ["toml"]}

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
black = "^23.1.0"
isort = "^5.12.0"
pytest-asyncio = "^0.20.3"
flake8 = "^6.0.0"
mypy = "^1.0.1"
mongomock = "^4.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
